[gd_scene load_steps=13 format=2]

[ext_resource path="res://539c483ff16585f1014ce8bff226bc56.png" type="Texture" id=1]
[ext_resource path="res://pressed.png" type="Texture" id=2]
[ext_resource path="res://vector-game-over-phrase-pixel-260nw-700369225.webp" type="Texture" id=3]
[ext_resource path="res://hover.png" type="Texture" id=4]
[ext_resource path="res://normal.png" type="Texture" id=5]
[ext_resource path="res://emmasophia.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://menu.gd" type="Script" id=7]
[ext_resource path="res://fpslabel.tscn" type="PackedScene" id=8]
[ext_resource path="res://test.tscn" type="PackedScene" id=9]
[ext_resource path="res://SettingsMenu.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 17
extra_spacing_bottom = -5
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 6 )

[node name="menu" type="Node2D"]
script = ExtResource( 7 )
gameScene = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 537.625 )
scale = Vector2( 2.74286, 2.6718 )
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1088.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1920.0
margin_bottom = 1088.0

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer"]
position = Vector2( 952, 232 )
scale = Vector2( 1.23846, 0.728571 )
texture = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_bottom = 0.533
margin_left = 700.0
margin_top = 600.0
margin_right = 1220.0
margin_bottom = 680.0
rect_pivot_offset = Vector2( 100, 0 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="TextureButton"]
anchor_left = -0.543
anchor_top = -0.752
anchor_right = -0.543
anchor_bottom = -0.752
margin_left = 282.36
margin_top = 60.16
margin_right = 802.36
margin_bottom = 140.16
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Start game"
align = 1
valign = 1

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 40.0
margin_right = 296.0
margin_bottom = 96.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="TextureButton2"]
anchor_right = 0.142
anchor_bottom = 0.14
margin_left = 56.0
margin_top = 8.0
margin_right = 141.784
margin_bottom = 43.16
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Exit"
align = 1
valign = 1

[node name="TextureButton3" type="TextureButton" parent="."]
anchor_bottom = 0.533
margin_left = 700.0
margin_top = 768.0
margin_right = 1220.0
margin_bottom = 848.0
rect_pivot_offset = Vector2( 100, 0 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="TextureButton3"]
anchor_left = -0.543
anchor_top = -0.752
anchor_right = -0.543
anchor_bottom = -0.752
margin_left = 286.36
margin_top = 68.16
margin_right = 806.36
margin_bottom = 140.16
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "settings
"
align = 1
valign = 1

[node name="Label" parent="." instance=ExtResource( 8 )]
margin_left = 1776.0
margin_top = 24.0
margin_right = 1899.0
margin_bottom = 67.0

[node name="SettingsMenu" parent="." instance=ExtResource( 10 )]

[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
